fix z-index for products

--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -317,6 +317,7 @@ main {
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 30;
 }
 
 .products-container :nth-child(3),
