--- a/assets/css/singleProduct.css
+++ b/assets/css/singleProduct.css
@@ -392,6 +392,7 @@ main {
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 30;
 }
 
 .products-card .products-card-title {
